# muon_sim

./: .gitignore  LICENSE  README.md  pyproject.toml  show_pq.py
docs/: datasets.md  expe_data.md  intersection.md  ref.md  road_map.md
example/notebooks/: dependant_var.ipynb  helium_atom.ipynb  mcmc1Dtest.ipynb  mcmc2D.ipynb  obj_sampler.ipynb  sampler_corr.ipynb
muon_sim/: __init__.py  __main__.py  geometry.py  mcmc.py  particles.py  sampler.py
notebooks/: obj_sampler.ipynb  sampler_corr.ipynb
tests/: __init__.py  test_intersection.py  test_pdf_norm.py  test_sampler.py  test_ward.py
tests/utils/: __init__.py
