[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "muon_sim"
authors = [
	{name = "zazbone", email = "coczaz@gmail.com"},
	{name = "maya", email = "lilou.guy@orange.fr"}
]
license = {file = "LICENSE"}
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Private :: Do Not Upload"
]
version = "0.1"
description = "Monte Carlo simulation of an atmospheric muon detector"
readme = "README.md"

dependencies = [
	"numpy >= 1.23",
	"matplotlib >= 3.6",
	"scipy >= 1.9",
	"pandas >= 1.5",
	"numba >= 0.56",
	"pyarrow >= 10.0.0"
]

[project.urls]
Home = "https://github.com/zazbone"


[project.optional-dependencies]
dev = [
	"ipykernel ~= 6.16",
	"ward",
	"black"
]


[tool.ward]
path = ["tests"]
